--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Гра Престолів: Тіні Вестеросу</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Merriweather:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              serif: ['Merriweather', 'serif'],
-              display: ['Cinzel', 'serif'],
+              serif: ["Merriweather", "serif"],
+              display: ["Cinzel", "serif"],
             },
             colors: {
               game: {
-                dark: '#0f0f10',
-                paper: '#d4c5a9',
-                gold: '#c5a059',
-                crimson: '#8a1c1c',
-                iron: '#4a5568',
-                stark: '#d1d5db',
-                lannister: '#ef4444',
-                targaryen: '#111827',
-              }
-            }
-          }
-        }
-      }
+                dark: "#0f0f10",
+                paper: "#d4c5a9",
+                gold: "#c5a059",
+                crimson: "#8a1c1c",
+                iron: "#4a5568",
+                stark: "#d1d5db",
+                lannister: "#ef4444",
+                targaryen: "#111827",
+              },
+            },
+          },
+        },
+      };
     </script>
     <style>
       body {
@@ -36,14 +40,14 @@
         color: #e5e5e5;
       }
       .scrollbar-hide::-webkit-scrollbar {
-          display: none;
+        display: none;
       }
       .scrollbar-hide {
-          -ms-overflow-style: none;
-          scrollbar-width: none;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
     </style>
-</head>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
